<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的框架</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    
     <string name="hello">Hello World, XListViewActivity!</string>
     <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    
    
    
    
    
     <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
       <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
      <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    
    
    
    
      <string name="empty"></string>
     <string name="setting">设　置</string>
    <string name="yixin">易　信</string>
    <string name="friend">朋友圈</string>
    <string name="group">群组</string>
    <string name="nearby">附近</string>
    <string name="listview">列表</string>
    <string name="app_about">关于</string>
    
     <string name="home">Home</string>
      <string name="refreshy">Refresh</string>
      
       <string name="search">Search</string>
         <string name="message_search_hint">搜索&#8230;</string>
       
    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>

    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
       
        <!-- 下拉刷新相关 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_pull_ongslabel">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="msg_load_ing">加载中....</string>
    
    <declare-styleable name="PagerSlidingTabStrip">
        <attr name="pstsIndicatorColor" format="color" />
        <attr name="pstsUnderlineColor" format="color" />
        <attr name="pstsDividerColor" format="color" />
        <attr name="pstsIndicatorHeight" format="dimension" />
        <attr name="pstsUnderlineHeight" format="dimension" />
        <attr name="pstsDividerPadding" format="dimension" />
        <attr name="pstsTabPaddingLeftRight" format="dimension" />
        <attr name="pstsScrollOffset" format="dimension" />
        <attr name="pstsTabBackground" format="reference" />
        <attr name="pstsShouldExpand" format="boolean" />
        <attr name="pstsTextAllCaps" format="boolean" />
        <attr name="selectedTabTextColor" format="color" />
    </declare-styleable>
    
    
        <string name="t5">UIRippleButton
                drakeet:ripple_color=\"#eeeeee\"
                drakeet:ripple_duration=\"500\"
                drakeet:shape_type=\"round\"
                drakeet:color_unpressed=\"#f44336\"
    </string>
    <string name="t4">UIRippleButton
                drakeet:ripple_color=\"#8a87ee\"
                drakeet:ripple_duration=\"500\"
                drakeet:shape_type=\"rectangle\"
                drakeet:color_unpressed=\"#f44336\"</string>
    <string name="t3">UIImageView\ndrakeet:shape_type=\"round\"</string>
    <string name="t2">UIButton\ndrakeet:shape_type=\"round\"</string>
    <string name="t1">UIButton\ndrakeet:radius=\"6dp\"</string>
    <string name="t0">UIButton\ndrakeet:alpha_pressed=\"40\"\ndrakeet:color_pressed=\"#0303ff\"\ndrakeet:color_unpressed=\"#8aacee\"</string>
    
    
    <string name="anim">动画</string>
	<string name="color">颜色</string>
	<string name="icon">图片</string>
	
	<!-- listview左侧滑动删除，炫酷UI效果 -->
	 <string name="NoChoose">0/3</string>
    <string name="ChooseOne">1/3</string>
    <string name="ChooseTow">2/3</string>
    <string name="ChooseThree">3/3</string>
    <string name="exitHint">再按一次退出程序</string>
    <string name="ChooseEnough">最多只可选择三个标签</string>
    <string name="ChooseHint">请先在上一页选择标签</string>

    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
	
    <!-- 照片墙 -->
     <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
     <string name="image_url">Image Url</string>
</resources>
