<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testbase.MainActivity" >

    <!--    android:showAsAction="ifRoom|collapseActionView"
    
    最后在stackoverflow当中终于找到答案：
    Action Bar not displaying Action Items (All in overflow) Android 。
    原来因为我使用的是android.support.v7.app.ActionBarActivity，
    所以在xml文件里，应该把android:showAsAction换成app:showAsAction。 -->
     <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search" />
    
  <!--  
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="share" />-->   
    <!--
     <item
        android:id="@+id/action_share1"
        android:actionProviderClass="com.example.testbase.actionbar.MyActionProvider"
        android:icon="@drawable/ic_launcher"
         app:showAsAction="always"
         android:title="share" />  -->    
         
         
         <item android:id="@+id/menu_item_share"
       app:showAsAction="always"
           android:icon="@drawable/ic_launcher"
        android:title="Share"
        android:actionProviderClass="android.widget.ShareActionProvider" />
       
     <item
        android:id="@+id/action_compose"
        android:icon="@drawable/icon_refresh_loading"
       app:showAsAction="always"
         android:title="@string/refreshy" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/tabbar_home"
        android:showAsAction="always"
          android:title="@string/home" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
