<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:drakeet="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
          android:background="#FFFFFF"
        android:padding="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                drakeet:radius1="6dp"
                android:background="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t1" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIButton
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                drakeet:alpha_pressed="40"
                drakeet:color_pressed="#0303ff"
                drakeet:color_unpressed="#8aacee"
                android:text="UIButton"
                android:textSize="10sp"
                android:background="@android:color/transparent" />
            <!--drakeet:radius="2dp" is default-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t0" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                drakeet:shape_type="round"
                android:background="@drawable/avatar11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t2" />

        </LinearLayout>
        
        
      <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                drakeet:shape_type="round"
                android:background="@drawable/head" />

           

        </LinearLayout>    
        
        
       <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                drakeet:shape_type="rectangle"
              
                android:background="@drawable/head" />

           

        </LinearLayout>      
        

        <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                drakeet:shape_type="round"
                android:src="@drawable/avatar21" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t3" />

        </LinearLayout>
        
        
        
          <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                drakeet:shape_type="rectangle"
                android:src="@drawable/avatar21" />

          

        </LinearLayout>
        
        
         <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                drakeet:shape_type="round"
                android:src="@drawable/head" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t3" />

        </LinearLayout>
        
         
         
          <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                drakeet:shape_type="rectangle"
                
                android:src="@drawable/head" />


        </LinearLayout>
         
         
         

        <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIRippleButton
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:text="Ripple"
                android:textSize="10sp"
                android:layout_margin="16dp"
                drakeet:ripple_color="#ffffff"
                drakeet:color_unpressed="#8aacee"
                drakeet:ripple_duration="500"
                drakeet:shape_type="rectangle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t4" />

        </LinearLayout>
        
        
         <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIRippleButton
                android:layout_width="128dp"
                android:layout_height="42dp"
                android:text="Ripple"
                android:textSize="10sp"
                android:layout_margin="16dp"
                drakeet:ripple_color="#FFFFFF"
                drakeet:color_unpressed="#EB5749"
                 drakeet:color_pressed="#FCD209"
                drakeet:ripple_duration="500"
                drakeet:shape_type="rectangle"/>

          

        </LinearLayout>
        
        
         
         
          <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.testbase.uiButton.library.UIRippleButton
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:text="Ripple"
                android:textSize="10sp"
                android:layout_margin="16dp"
                drakeet:ripple_color="#FFFFFF"
                drakeet:color_unpressed="#EB5749"
                 drakeet:color_pressed="#FCD209"
                drakeet:ripple_duration="500"
                drakeet:shape_type="round"/>

            

        </LinearLayout>
         
         
         
         
         
         
        

        <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.testbase.uiButton.library.UIRippleButton
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:text="Circle UIRippleButton"
                android:textSize="9sp"
                android:layout_margin="16dp"
                drakeet:ripple_color="#eeeeee"
                drakeet:ripple_duration="500"
                drakeet:shape_type="round"
                drakeet:color_unpressed="#f44336" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>